# VapourSynth-WNNM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux-arm64.yml  linux.yml  macos-arm64.yml  windows.yml
source/: wnnm.cpp
